pkg/front_end/testcases/general_nnbd_opt_out/redirecting_initializer_arguments_test.dart.weak.transformed.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/general_nnbd_opt_out/redirecting_initializer_arguments_test.dart:14:46: Error: The argument type 'String' can't be assigned to the parameter type 'T'.
//   Foo.from(String _init) : this._internal(x: _init);
//                                              ^
//
import self as self;
import "dart:core" as core;

class Foo<T extends core::Object* = dynamic> extends core::Object {
  generic-covariant-impl field self::Foo::T* x;
  constructor from(core::String* _init) → self::Foo<self::Foo::T*>*
    : this self::Foo::_internal(x: let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/general_nnbd_opt_out/redirecting_initializer_arguments_test.dart:14:46: Error: The argument type 'String' can't be assigned to the parameter type 'T'.
  Foo.from(String _init) : this._internal(x: _init);
                                             ^" in _init as{TypeError} <BottomType>)
    ;
  constructor _internal({self::Foo::T* x = #C1}) → self::Foo<self::Foo::T*>*
    : self::Foo::x = x, super core::Object::•()
    ;
  abstract member-signature get _identityHashCode() → core::int*;
  abstract member-signature method _instanceOf(dynamic instantiatorTypeArguments, dynamic functionTypeArguments, dynamic type) → core::bool*;
  abstract member-signature method _simpleInstanceOf(dynamic type) → core::bool*;
  abstract member-signature method _simpleInstanceOfTrue(dynamic type) → core::bool*;
  abstract member-signature method _simpleInstanceOfFalse(dynamic type) → core::bool*;
  abstract member-signature operator ==(dynamic other) → core::bool*;
  abstract member-signature get hashCode() → core::int*;
  abstract member-signature method toString() → core::String*;
  abstract member-signature method noSuchMethod(core::Invocation* invocation) → dynamic;
  abstract member-signature get runtimeType() → core::Type*;
}
static method main() → void {}

constants  {
  #C1 = null
}
